--- a/multimap/index.html
+++ b/multimap/index.html
@@ -48,6 +48,9 @@
 		var permahash=false;
 		var next=false;
 		var marker=null;
+		var aktLayer=null;
+		var baseMaps = null;
+
 		var maxzoom_std=20;
 		var maxzoom_osm=19;
 		var maxzoom_topo=16
@@ -65,7 +68,12 @@
 		var southWest = L.latLng(46.2520,8.7891),
 			northEast = L.latLng(49.2714,17.6660),
 			boundsAUT = L.latLngBounds(southWest, northEast);
-		
+
+		var layerAdrMapSurfer="http://korona.geog.uni-heidelberg.de/tiles/roads/x={x}&y={y}&z={z}";
+		var layerMapSurfer = new L.TileLayer(layerAdrMapSurfer,{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapsurfernet.com/">Mapsurfer</a>'});
+		var stdLayer = layerMapSurfer;
+		var stdLayerName = "OpenStreetMap Mapsurfer";
+
 		function cookie_read(cookiename) {
 			var cookies=document.cookie.split("; ");
 			for(var i=0;i<cookies.length;i++) {
@@ -89,14 +97,15 @@
 		function set_hash(marker_position) {
 			var digits=Math.ceil(2*Math.log(map.getZoom())-1);
 			var position=map.getZoom()+"/"+map.getCenter().lat.toFixed(digits)+"/"+map.getCenter().lng.toFixed(digits);
+			var layer = aktLayer;
 			var e=new Date;e.setYear(e.getFullYear()+10);
-			document.cookie="map="+position+" ;expires="+e;
+			document.cookie="map="+position+";layer="+layer+" ;expires="+e;
 			if(marker==null) {
 				if(next==true){
-					window.location.hash="map="+position;
+					window.location.hash="map="+position+"/"+layer;
 					next=false;
 				} else {
-					window.location.replace('#map='+position);
+					window.location.replace('#map='+position+"/"+layer);
 				}
 				if((permahash==true) || (cookie_read("permahash")==window.location.hash.substr(1))){
 					next=true;
@@ -104,14 +113,14 @@
 					document.cookie="permahash="+position;
 				}
 			} else if(marker_position!=null) {
-				window.location.hash="marker="+map.getZoom()+"/"+marker_position.lat.toFixed(digits)+"/"+marker_position.lng.toFixed(digits);
+				window.location.hash="marker="+map.getZoom()+"/"+marker_position.lat.toFixed(digits)+"/"+marker_position.lng.toFixed(digits)+"/"+layer;
 			}
 		}
 
 		function set_view() {
 			if(lock==false) {
 				var hash=window.location.hash;
-				if((hash.contains("map")) && (hash.split("/").length-1 == 2)) {
+				if((hash.contains("map")) && (hash.split("/").length-1 == 3)) {
 					var position = hash.substr(1).split("map=")[1].split("/");
 					if(isValid(position)) {
 						map.setView(new L.LatLng(position[1], position[2]), position[0]);
@@ -120,6 +129,7 @@
 						map.removeLayer(marker);
 						marker=null;
 					}
+					aktLayer=decodeURIComponent(position[3] === undefined ? stdLayerName : position[3]);
 				} else if((hash.contains("marker")) && (hash.split("/").length-1 == 2)) {
 					var position = hash.substr(1).split("marker=")[1].split("/");
 					if((marker==null) && (isValid(position))){
@@ -131,16 +141,53 @@
 					} else if((marker!=null) && (isValid(position))) {
 						marker.setLatLng(new L.LatLng(position[1], position[2]));
 					}
+					aktLayer=decodeURIComponent(position[3] === undefined ? stdLayerName : position[3]);
 					setMarkerPopup(new L.LatLng(position[1], position[2]));
 				} else if(cookie_read("map")) {
 					var position = cookie_read("map").split("/");
+					aktLayer=decodeURIComponent(position[3] === undefined ? stdLayerName : position[3]);
 					map.setView(new L.LatLng(position[1], position[2]), position[0]);
 				} else {
 					map.setView(new L.LatLng(46, 16), 5);
+					aktLayer=stdLayerName;
 				}
+				console.log("Debug: set-view: aktlayer="+aktLayer)
+				setAktLayer(aktLayer);
 				set_hash();
 			}
+
 			lock=false;
+		}
+
+		function setAktLayer(layerToSet){
+			console.log("Debug: setAktLayer: aktlayer="+aktLayer)
+			var l = readLayer(layerToSet);
+			if(l){
+				console.log("Debug: setAktLayer: readlayer="+ l.name+"/"+ l.layerObj)
+				map.addLayer(l.layerObj);
+			}
+		}
+		function readLayer(searchedLayer){
+			if (searchedLayer==null || searchedLayer.length<1){return}
+			for (baseMap in baseMaps)
+			{
+				var maxZoom;
+				var layerObj;
+				for (layerName in baseMaps[baseMap].layers){
+					var layerObj = baseMaps[baseMap].layers[layerName];
+					var layerOptions=layerObj.options;
+					if (layerOptions!=null){
+						maxZoom=layerOptions.maxZoom;
+					}
+					if (searchedLayer===layerName){
+						//found!!!
+						console.log("Debug: found: "+layerName);
+						return {name: layerName, maxZoom: maxZoom, layerObj: layerObj};
+					}
+					console.log("Debug: not right layer: "+layerName);
+				}
+			}
+			return {name: "Standard layer", maxZoom: maxzoom_19, layerObj: stdLayer};
 		}
 		
 		function setMarkerPopup(latLngPos){
@@ -159,8 +206,6 @@
 				return true;
 			}
 		}
-		
-		
 		
 		//main function
 		// create opentopomap layer
@@ -321,8 +366,6 @@
 		var layerOpenStreetBrowser = new L.TileLayer(layerOpenStreetBrowserUrl,{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: © <a href="http://www.openstreetbrowser.org">OpenStreetBrowser</a>'});
 		
 		//Mapsurfer
-		var layerAdrMapSurfer="http://korona.geog.uni-heidelberg.de/tiles/roads/x={x}&y={y}&z={z}";
-		var layerMapSurfer = new L.TileLayer(layerAdrMapSurfer,{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapsurfernet.com/">Mapsurfer</a>'});
 		var layerMapSurferHillOvl = new L.TileLayer("http://korona.geog.uni-heidelberg.de/tiles/asterh/x={x}&y={y}&z={z}",{maxZoom: maxzoom_osm,detectRetina: true, transparent: true, attribution: 'Kartendaten: © <a href="http://mapsurfernet.com/">Mapsurfer</a>'});
 		var layerMapSurferAdminOvl = new L.TileLayer("http://korona.geog.uni-heidelberg.de/tiles/adminb/x={x}&y={y}&z={z}",{maxZoom: maxzoom_osm,detectRetina: true, transparent: true, attribution: 'Kartendaten: © <a href="http://mapsurfernet.com/">Mapsurfer</a>'});
 		var layerAdrMapSurferOvl="http://korona.geog.uni-heidelberg.de/tiles/hybrid/x={x}&y={y}&z={z}"
@@ -387,7 +430,7 @@
 		var grid = L.grid({redraw: 'moveend'});
 		
 		//Layer-Switcher
-		var baseMaps = [
+		baseMaps = [
 			{groupName : "OSM Standard",
 				expanded : true,
 				layers    : {
@@ -590,6 +633,11 @@
             else if(!((e.name=="Google Satellit")||(e.name=="Google Hybrid"))&&(map.getZoom()>maxzoom_std)){
                 map.setZoom(maxzoom_std);
             }
+			//console.log(e.maxZoom);
+			console.log(e.name);
+
+			aktLayer= e.name;
+			set_hash();
 		});
 
 	</script>
