Teständerung für VS-Code

--- a/multimap/index.html
+++ b/multimap/index.html
@@ -1,7 +1,7 @@
 ﻿<html lang="de">
   <head>
     <meta charset="utf-8">
-	<title>Multimap (20160119-1502)</title>
+	<title>Multimap (20160425-1641)</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />	
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
@@ -659,7 +659,7 @@
 			aktLayer= e.name;
 			set_hash();
 		});
-
+// eine wichtige änderung
 	</script>
 </body>
 </html>
