--- a/multimap/index.html
+++ b/multimap/index.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="lib/leaflet.measure.css" />
 	<link rel="stylesheet" href="lib/Leaflet.Coordinates-0.1.5.css" />
 	<link rel="stylesheet" href="lib/Leaflet.Coordinates-0.1.5.ie.css" />
+	<link rel="stylesheet" href="lib/font-awesome.min.css" />
 	<!-- Leaflet-Plugins (js) -->
 	<script src="lib/leaflet.measure.js"></script>
 	<script src="lib/styledLayerControl.js"></script>
@@ -32,6 +33,8 @@
     <script src="lib/L.Control.Zoomslider.js"></script>
 	<script src="lib/L.Control.Locate.js"></script>
 	<script src="lib/Leaflet.Coordinates-0.1.5.min.js"></script>
+	<script src="lib/leaflet.filelayer.js"></script>
+    <script src="lib/togeojson.js"></script>
 	<!-- other plugins -->
 	<script src="lib/leaflet-google.js"></script>
 	<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
@@ -153,7 +156,7 @@
 					map.setView(new L.LatLng(46, 16), 5);
 					aktLayer=stdLayerName;
 				}
-				console.log("Debug: set-view: aktlayer="+aktLayer)
+				//console.log("Debug: set-view: aktlayer="+aktLayer)
 				setAktLayer(aktLayer);
 				set_hash();
 			}
@@ -162,10 +165,10 @@
 		}
 
 		function setAktLayer(layerToSet){
-			console.log("Debug: setAktLayer: aktlayer="+aktLayer)
+			//console.log("Debug: setAktLayer: aktlayer="+aktLayer)
 			var l = readLayer(layerToSet);
 			if(l){
-				console.log("Debug: setAktLayer: readlayer="+ l.name+"/"+ l.layerObj)
+				//console.log("Debug: setAktLayer: readlayer="+ l.name+"/"+ l.layerObj)
 				map.addLayer(l.layerObj);
 			}
 		}
@@ -183,10 +186,10 @@
 					}
 					if (searchedLayer===layerName){
 						//found!!!
-						console.log("Debug: found: "+layerName);
+						//console.log("Debug: found: "+layerName);
 						return {name: layerName, maxZoom: maxZoom, layerObj: layerObj};
 					}
-					console.log("Debug: not right layer: "+layerName);
+					//console.log("Debug: not right layer: "+layerName);
 				}
 			}
 			return {name: "Standard layer", maxZoom: maxzoom_19, layerObj: stdLayer};
@@ -299,6 +302,11 @@
 		var g_satellite = new L.Google('SATELLITE', {maxZoom: maxzoom_g_sat,attribution: 'Kartendaten: © Google'});
 		var g_hybrid   = new L.Google('HYBRID', {maxZoom: maxzoom_g_sat,attribution: 'Kartendaten: © Google'});
 		var g_terrain   = new L.Google('TERRAIN',{maxZoom: maxzoom_topo,attribution: 'Kartendaten: © Google'});
+		var layerGoogleStd = new L.TileLayer("http://mt{s}.google.com/vt/x={x}&y={y}&z={z}",{ maxZoom: maxzoom_std, detectRetina: true, subdomains: '123', attribution: 'Kartendaten: © Google'});
+		var layerGoogleTer = new L.TileLayer("http://mt{s}.google.com/vt/lyrs=p&x={x}&y={y}&z={z}",{ maxZoom: maxzoom_std, detectRetina: true, subdomains: '123', attribution: 'Kartendaten: © Google'});
+		var layerGoogleHyb = new L.TileLayer("http://mt{s}.google.com/vt/lyrs=y&x={x}&y={y}&z={z}",{ maxZoom: maxzoom_g_sat, detectRetina: true, subdomains: '123', attribution: 'Kartendaten: © Google'});
+		var layerGoogleSat = new L.TileLayer("http://mt{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}",{ maxZoom: maxzoom_g_sat, detectRetina: true, subdomains: '123', attribution: 'Kartendaten: © Google'});
+		var layerGoogleLbl = new L.TileLayer("http://mt{s}.google.com/vt/lyrs=h&x={x}&y={y}&z={z}",{ maxZoom: maxzoom_g_sat, detectRetina: true, subdomains: '123', attribution: 'Kartendaten: © Google'});
 		
 		//apple layers
 		layerAdrAppleStd="https://cdn{s}.apple-mapkit.com/tp/tile?type=tile&style=0&size=1&x={x}&y={y}&z={z}&scale=1&lang=de-DE&imageFormat=jpg&vendorkey=38da783db1ef0c2d9f8e783a063ffcdc6a6330fe"
@@ -307,7 +315,9 @@
 		layerAppleSat = new L.TileLayer(layerAdrAppleSat,{ maxZoom: maxzoom_g_sat, detectRetina: true, subdomains: '1234', attribution: 'Kartendaten: © Apple Inc.'});
 		layerAdrAppleOverlay="https://cdn{s}.apple-mapkit.com/tp/tile?type=tile&style=46&size=1&x={x}&y={y}&z={z}&scale=1&lang=de-DE&imageFormat=png&vendorkey=38da783db1ef0c2d9f8e783a063ffcdc6a6330fe"
 		layerAppleOverlay = new L.TileLayer(layerAdrAppleOverlay,{ maxZoom: maxzoom_g_sat,detectRetina: true, 	transparent: true, format: 'image/png', subdomains: '1234', attribution: 'Kartendaten: © Apple Inc.'});
-
+		layerAdrAppleStdAlt="http://gsp2.apple.com/tile?api=1&style=slideshow&layers=default&lang=de_DE&z={z}&x={x}&y={y}&v=10"
+		layerAppleStdAlt = new L.TileLayer(layerAdrAppleStdAlt,{ maxZoom: maxzoom_std, detectRetina: true, subdomains: '1234', attribution: 'Kartendaten: © Apple Inc.'});
+		
 		// Bing layers
 		var bing_areal = new L.BingLayer("AuhiCJHlGzhg93IqUH_oCpl_-ZUrIE6SPftlyGYUvr9Amx5nzA-WqGcPquyFZl4L", {type: 'Aerial',maxZoom: maxzoom_std});
 		var bing_areal_label = new L.BingLayer("AuhiCJHlGzhg93IqUH_oCpl_-ZUrIE6SPftlyGYUvr9Amx5nzA-WqGcPquyFZl4L", {type: 'AerialWithLabels',maxZoom: maxzoom_std});
@@ -482,10 +492,12 @@
 				layers    : {
 					"Basemap.at Grundkarte": layerGrpBasemVd,
 					"Apple Standard": layerAppleStd,
+					"Apple Standard (alternativ)": layerAppleStdAlt,
 					"Here-Maps Standard": layerNokiaRoad,
 					"Here-Maps Verkehr": layerNokiaTrafic,
 					"Bing Standard":  bing_road,
-					"Google Standard": g_roadmap,
+					//"Google Standard": g_roadmap,
+					"Google Standard": layerGoogleStd,
 					"Tomtom Standard": layerTomtom,
 					"Esri Streetmap": layerEsriStreet,
 					//"Kartenwerkstatt OSM": layerKwStattOsm,
@@ -506,7 +518,8 @@
 					"OpenStreetMap Landscape": layerOSMLands,
 					"Esri Topo Map": layerEsriTopo,
 					"Here-Maps Terrain": layerNokiaTerr,
-					"Google Terrain":  g_terrain,
+					//"Google Terrain":  g_terrain,
+					"Google Terrain":  layerGoogleTer,
 				}
 			},
 			{groupName : "Themen und Diverse",
@@ -533,11 +546,11 @@
 			{groupName : "Satellit",
 				expanded : false,
 				layers    : {
-					"Apple Satellit": layerAppleSat,
+					"Google Satellit":  g_satellite,
+					"Google Satellit (alternativ)":  layerGoogleSat,
 					"Here-Maps Satellit": layerNokiaSat,
 					"Bing Satellit":  bing_areal,
-					"Google Satellit":  g_satellite,
-					//"Mapquest Satellit": layerMapquestSat,
+					"Apple Satellit": layerAppleSat,
 					"Mapbox Satellit":layerMapBoxSat,
 					"Esri Satellit": layerEsriWldImg,
 					"Basemap Orthofoto": layerBasemOrtho,
@@ -549,6 +562,7 @@
 					"Here-Maps Hybrid": layerNokiaHybrid,
 					"Bing Hybrid":  bing_areal_label,
 					"Google Hybrid": g_hybrid,
+					"Google Hybrid (alternativ)": layerGoogleHyb,
 					"Mapbox Hybrid":layerMapBoxHybr,
 				}
 			},
@@ -568,6 +582,7 @@
 					layers    : {
 						//"Mapquest Beschriftungen": layerOSMOvl,
 						"Mapsurfer Beschriftungen": layerMapSurferOvl,
+						"Google Beschriftungen": layerGoogleLbl,
 						"Apple Beschriftungen": layerAppleOverlay,
 						"Nokia Heremaps Beschriftungen":layerNokiaLabel,
 						"Basemap Beschriftungen": layerBasemOvl,
@@ -638,6 +653,13 @@
 		var miniMapLayer = new L.TileLayer(layerAdrMapSurfer, {minZoom: 0, maxZoom: 14, //subdomains: '1234', 
 		attribution: 'Kartendaten: © <a href="http://korona.geog.uni-heidelberg.de/">Mapsurfer</a>' });
 		var miniMap = new L.Control.MiniMap(miniMapLayer, { toggleDisplay: true, zoomLevelOffset: -7 }).addTo(map);
+		L.Control.FileLayerLoad.LABEL = '<i class="fa fa-folder-open" style="line-height: 1.5" ></i>';
+		L.Control.fileLayerLoad({layer: L.geoJson, layerOptions: {style: {color:'red'}},
+			addToMap: true, fileSizeLimit: 1024, formats: ['.geojson','.kml']}).addTo(map);
+		var control = L.Control.fileLayerLoad();
+		control.loader.on('data:loaded', function (e) {
+			layerswitcher.addOverlay(e.layer, e.filename);
+		});
 		
 		map.on('moveend', function(e) {
 			lock=true;
@@ -678,8 +700,9 @@
 
 			aktLayer= e.name;
 			set_hash();
+			fixFavIcon();
 		});
-// eine wichtige änderung
+
 	</script>
 </body>
 </html>
